Add log viewing functionality with updated HTML structure and styling

--- a/public/index.html
+++ b/public/index.html
@@ -3,9 +3,81 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>GigDates Tracker</title>
+  <title>GigDates Tracker Logs</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      margin: 0;
+      padding: 0;
+    }
+    h1 {
+      text-align: center;
+      background-color: #333;
+      color: white;
+      margin: 0;
+      padding: 1rem 0;
+    }
+    table {
+      width: 100%;
+      border-collapse: collapse;
+      margin: 20px auto;
+      max-width: 1200px;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    }
+    th, td {
+      padding: 10px;
+      border: 1px solid #ddd;
+      text-align: left;
+    }
+    th {
+      background-color: #f4f4f4;
+    }
+    tr:nth-child(even) {
+      background-color: #f9f9f9;
+    }
+  </style>
 </head>
 <body>
-  <h1>Welcome to GigDates Tracker</h1>
+  <h1>GigDates Tracker Logs</h1>
+  <table>
+    <thead>
+      <tr>
+        <th>Timestamp</th>
+        <th>Type</th>
+        <th>URL</th>
+        <th>Referrer</th>
+      </tr>
+    </thead>
+    <tbody id="logs"></tbody>
+  </table>
+  
+  <script>
+    document.addEventListener('DOMContentLoaded', () => {
+      fetch('https://gigdates-tracker.netlify.app/.netlify/functions/viewLog')
+        .then(response => response.json())
+        .then(data => {
+          const logsTable = document.getElementById('logs');
+          if (data.length === 0) {
+            logsTable.innerHTML = '<tr><td colspan="4">No logs available</td></tr>';
+          } else {
+            data.forEach(log => {
+              const row = `
+                <tr>
+                  <td>${log.timestamp}</td>
+                  <td>${log.type}</td>
+                  <td>${log.url}</td>
+                  <td>${log.referrer || 'N/A'}</td>
+                </tr>
+              `;
+              logsTable.innerHTML += row;
+            });
+          }
+        })
+        .catch(error => {
+          console.error('Error fetching logs:', error);
+          document.getElementById('logs').innerHTML = '<tr><td colspan="4">Error loading logs</td></tr>';
+        });
+    });
+  </script>
 </body>
 </html>
