--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,6 @@
     </head>
     <body>
         <div id="app"></div>
-        <img src="/.netlify/functions/tracker" title="" />
+        <img src="/netlify/functions/tracker" title="" />
     </body>
 </html>
