--- a/public/venue.html
+++ b/public/venue.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Home</title>
+  <title>Band</title>
 </head>
 <body>
   <img src="/.netlify/functions/tracker" style="display: none;" />
