--- a/public/index.html
+++ b/public/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Home</title>
+  <title>Gigdates Tracker</title>
 </head>
 <body>
-  <img src="/.netlify/functions/tracker" style="display: none;" />
+  <h1>Gigdates Tracker</h1>
 </body>
 </html>
